--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <p>Hola soy el usuario original</p>
     <p>cambios muchos cambios</p>
-    <p>Hola, este es un cambio</p>
+    <p>Aquí se aproxima un conflicto</p>
 </body>
 </html>
